# nishika-old-mansion-2024-summer

./: .gitignore  README.md  explore_data.ipynb  pyproject.toml  tutorial.ipynb  utils.py
data/: data_explanation.xlsx  sample_submission.csv
src/nishika_old_mansion_2024_summer/: __init__.py
