[project]
name = "nishika-old-mansion-2024-summer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mount-tyo", email = "82567570+mount-tyo@users.noreply.github.com" }
]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nishika_old_mansion_2024_summer"]
