[project]
name = "nishika-old-mansion-2024-summer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "mount-tyo", email = "82567570+mount-tyo@users.noreply.github.com" }
]
dependencies = [
    "notebook>=7.2.1",
    "matplotlib>=3.9.1",
    "numpy>=2.0.0",
    "pandas>=2.2.2",
    "japanize-matplotlib>=1.1.3",
    "scikit-learn>=1.5.1",
    "lightgbm>=4.4.0",
    "seaborn>=0.13.2",
    "optuna>=3.6.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/nishika_old_mansion_2024_summer"]
